--- a/introduction.html
+++ b/introduction.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title>Introduction</title>
 </head>
 <body>
   
@@ -12,7 +12,7 @@
     <li><a href="/introduction.html">Intro</a></li>
   </ul>
   <main>
-    <h1>Hello World</h1>
+    <h1>Introduction</h1>
   </main>
 
 </body>
