完成導覽條

--- a/index.html
+++ b/index.html
@@ -8,7 +8,31 @@
 </head>
 <body>
   
-  <h1 class="title">Hello World</h1>
+  <!-- 上方導覽條 -->
+  <nav>
+    <div class="logo"></div>
+    <div class="links">
+      <ul>
+        <li><a href="#">部落格</a></li>
+        <li><a href="#">關於我</a></li>
+      </ul>
+    </div>
+  </nav>
+  
+  <!-- 文章區 -->
+  <main class="main">
+    <div class="article">
+      <h1>我的標題</h1>
+
+      <div class="article-info">
+        <span class="author">某某某</span>
+        <span class="created-at">於 2020/10/12 創建</span>
+      </div>
+
+      <p>文章的內容文章的內容文章的內容文章的內容</p>
+      <a href="#">查看全文</a>
+    </div>
+  </main>
 
 </body>
 </html>
