完成卡片css & 完成查看全文功能

--- a/index.html
+++ b/index.html
@@ -21,16 +21,37 @@
   
   <!-- 文章區 -->
   <main class="main">
+    
+    <!-- 第一篇 -->
     <div class="article">
-      <h1>我的標題</h1>
+      <h1>許地能能</h1>
 
       <div class="article-info">
-        <span class="author">某某某</span>
+        <span class="author">王阿浩</span>
         <span class="created-at">於 2020/10/12 創建</span>
       </div>
 
-      <p>文章的內容文章的內容文章的內容文章的內容</p>
-      <a href="#">查看全文</a>
+      <p>
+        許地能能，歌最那還持紀時，習去銷間因反何怎文的、樂人母這主，中會於物資人工，令我一主得命多小少，家陽原木是大，課舞果安規市後。處她阿更來員調可很信勢感種解轉場太？告一結你很聞關先天由現輕在。前到人一人臉我，是能星我故起意氣式聲縣的健雲我，過可動新、的界器？中明看倒失且口他校就地醫動新……照物選形正夫。
+
+證達上因低她了你同的苦業光。...
+      </p>
+      <a class="see-details" href="articles/article1.html">查看全文</a>
+    </div>
+
+    <!-- 第二篇 -->
+    <div class="article">
+      <h1>間因反三</h1>
+
+      <div class="article-info">
+        <span class="author">曾阿誌</span>
+        <span class="created-at">於 2020/11/22 創建</span>
+      </div>
+
+      <p>
+        起這不們友會日建資聽著響當林大讀金在死進自你心新華北就公黃合子東這常跑表，究人少來著巴。友畫好機生來一過機角方國他爭也，最來半來山管些影安則無上居男問、後可熱？事要童蘭了後，一就嚴士是物經三一、我利甚沒思因的他大顧小氣們人是在興。...
+      </p>
+      <a class="see-details" href="articles/article2.html">查看全文</a>
     </div>
   </main>
 
